[package]
name = "edtr-types-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "edtr_types"
path = "src/lib.rs"
doc = true

[[bin]]
name = "parse_test"
path = "src/parse_test.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
#mediawiki_parser = "0.4"
#mwparser_utils = { git = "https://github.com/serlo/mediawiki-parser-utils" }
#mfnf_template_spec = { git = "https://github.com/serlo/mfnf-template-spec" }
clap_derive = "3.2"
derive_more = "0.99" 
